gsap flickering fixed and added 404 page

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -41,8 +41,7 @@
   color: $primary;
   min-height: 80vh;
   max-width: 1000px;
-  margin: 0 auto;
-
+  margin: 24px auto;
   padding: 16px;
 }
 .grid {
